--- a/malaria_atlas_project.Rmd
+++ b/malaria_atlas_project.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "malaria_atlas_project"
+title: "Malaria Atlas Project comparison"
 author: "John Archer"
 date: "Jan - March 2021"
 output: 
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```
 
+
+### Malaria Atlas Project comparison
 
 Download/install/load required packages.
 ```{r packages}
@@ -323,7 +325,7 @@ rcl_matrix <- c(0, 30, 1, # 30 minutes
                 60, 180, 3, # 3 hours
                 180, 360, 4, # 6 hours 
                 360, 720, 5, # 12 hours
-                720, 10000, 6 # 12+ hours
+                720, 100000, 6 # 12+ hours
 )
 
 rcl_matrix <- matrix(rcl_matrix, ncol=3, byrow=TRUE)
